--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,9 @@
   text-align: center;
 }
 
-.App-logo {
+.Alan-logo {
   height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  border-radius: 24px;
 }
 
 .App-header {
@@ -25,14 +19,10 @@
 }
 
 .App-link {
-  color: #61dafb;
+  color: #09d3ac;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  max-width: 600px;
+  text-align: left;
 }
